--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <title>Manifest</title>
     <!--Шлях до css це відносний шлях не залежить ввід папки-->
     <link rel="stylesheet" href="@@webRoot/bundle.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <meta name="google-site-verification" content="xrMmi2-RD2dywhZlpCb4KbkI9R87vBRi9rN4VTAVMhU" />
 </head>
 
@@ -72,22 +73,30 @@
 
             <!-- section slider -->
             <section class="slider">
-                <div class="slider__item-1">
-                    <img class="slider__img" src="img/slider-03.jpg" alt="">
-                    <p class="h6 slider__name-hide">Mocha</p>
-                </div>
-                <div class="slider__item">
-                    <img class="slider__img" src="img/slider-02.jpg" alt="">
+                <div class="swiper mySwiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img class="slider__img" src="img/slider-03.jpg" alt="">
+                        <p class="h6 slider__name-hide">Mocha</p>
+                      </div>
+                      <div class="swiper-slide">
+                        <img class="slider__img" src="img/slider-02.jpg" alt="">
                     <p class="h6 slider__name">Mixkit Inspo</p>
-                </div>
-                <div class="slider__item">
-                    <img class="slider__img" src="img/slider-03.jpg" alt="">
-                    <p class="h6 slider__name">Abalone</p>
-                </div>
-                <div class="slider__item-2">
-                    <img class="slider__img" src="img/slider-02.jpg" alt="">
-                    <p class="h6 slider__name">Dreamy</p>
-                </div>
+                      </div>
+                      <div class="swiper-slide"> 
+                        <img class="slider__img" src="img/slider-03.jpg" alt="">
+                        <p class="h6 slider__name">Abalone</p>
+                    </div>
+                      <div class="swiper-slide">
+                        <img class="slider__img" src="img/slider-02.jpg" alt="">
+                        <p class="h6 slider__name">Dreamy</p>
+                      </div>
+            
+                    </div>
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                    <!-- <div class="swiper-pagination"></div> -->
+                  </div>
             </section>
             <!-- section slider End -->
 
@@ -214,6 +223,25 @@
     <!--Обовязково додавати потрібно для JS -->
     <script> var exports = {}; </script>
     <script src="@@webRoot/js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        slidesPerView: 2.58,
+        spaceBetween: 30,
+        loop: true,
+        centeredSlides: true,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
 </body>
 
 </html>
